--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,7 +6,7 @@ bot:
   automerge: true
 build_platform:
   linux_aarch64: linux_64
-  osx_arm64: osx_64
+  osx_arm64: osx_arm64
   win_arm64: win_64
 conda_build:
   pkg_format: '2'
@@ -26,4 +26,5 @@ linter:
   - lint_stdlib
 provider:
   linux_64: github_actions
+  osx_arm64: github_actions
 test: native_and_emulated
