--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -23,7 +23,7 @@ cxx_compiler:
 cxx_compiler_version:
 - '19'
 github_actions_labels:
-- cirun-openstack-cpu-large
+- cirun-macos-m4-large
 icu:
 - '75'
 libsqlite:
