MNT: Re-rendered with conda-smithy 3.53.3 and conda-forge-pinning 2025.12.16.02.55.47
Other tools:
- conda-build 25.11.1
- rattler-build 0.54.0
- rattler-build-conda-compat 1.4.10

--- a/.ci_support/linux_64_nodejs24.yaml
+++ b/.ci_support/linux_64_nodejs24.yaml
@@ -19,11 +19,11 @@ docker_image:
 icu:
 - '75'
 nodejs:
-- '20'
+- '24'
 openssl:
 - '3.5'
 target_platform:
-- linux-aarch64
+- linux-64
 zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
