--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,9 @@
 c_stdlib_version:                                   # [(osx and x86_64) or linux]
   - '10.15'                                         # [osx and x86_64]
   - "2.28"                                          # [linux]
-github_actions_labels:
-- cirun-openstack-cpu-large
+
+github_actions_labels:       # [linux]
+- cirun-openstack-cpu-large  # [linux]
 
 # void creating spurious jobs due to multiple global pins for the package we're building here
 nodejs:
