--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,8 @@
 c_stdlib_version:                                   # [(osx and x86_64) or linux]
   - '10.15'                                         # [osx and x86_64]
   - "2.28"                                          # [linux]
-github_actions_labels:
-- cirun-openstack-cpu-large
+github_actions_labels:       # [linux]
+- cirun-openstack-cpu-large  # [linux]
 MACOSX_SDK_VERSION:  # [osx and x86_64]
   - "11.0"           # [osx and x86_64]
 
