--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -5,7 +5,6 @@ bot:
   - 24.x
 build_platform:
   linux_aarch64: linux_64
-  osx_arm64: osx_64
   win_arm64: win_64
 conda_build:
   pkg_format: '2'
@@ -25,4 +24,5 @@ linter:
   - lint_stdlib
 provider:
   linux_64: github_actions
+  osx_arm64: default
 test: native_and_emulated
